@@ -1,3 +1,9 @@
+2014-01-16  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/NSScanner.m: Implement -scanInteger: by conditionally
+	calling -scanInt: or -scanLongLong: based on the pointer size
+	detected at configure time.
+
 2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSKeyValueObserving.m:
